@@ -103,6 +103,11 @@ size_t Event::tick() const
     return m_tick;
 }
 
+void Event::setTick(size_t tick)
+{
+    m_tick = tick;
+}
+
 Event::Type Event::type() const
 {
     return m_type;
