@@ -30,6 +30,7 @@ private slots:
     void test_exportTo_multipleNotesAndTracks_shouldExportCorrectly();
     void test_exportTo_timing_shouldBeCorrect();
     void test_exportTo_mutedAndSoloedTracks_shouldExportCorrectly();
+    void test_exportTo_rangedExport_shouldExportCorrectRange();
     // void test_readHalla2Mid();
 };
 
