@@ -7,6 +7,8 @@ New features:
 
 * Take mute/solo into account when exporting as a MIDI file
 
+* Introduce MidiExportDialog with start and end positions
+
 Bug fixes:
 
 Other:
